# QEmbedIPython

./: CMakeLists.txt  LICENSE_CC_BY_40.md  Notes.md  README.md
src/: CMakeLists.txt  QEmbedIPython.cxx  qEmbedIPythonPythonManager.cxx  qEmbedIPythonPythonManager.h
